...
    <string name="remove_board_ask">Remove board %s?</string>
    <string name="remove_column_ask">Remove column %s?</string>
    <string name="change_name">Change name</string>
    <string name="open_board">Open board</string>
    <string name="name">Name</string>
    <string name="give_name">Give a name for the new board</string>
    <string name="required">Required field</string>
    <string name="max_length">Must be less than %s chars</string>
    <string name="min_length">Must have at least %s chars</string>
    <string name="is_negative">Value must be positive</string>
    <string name="past_date">Date shouldn\'t be in the past</string>
    <string name="future_date">Date shouldn\'t be in the future</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
...
