<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="boardsViewModel"
                  type="com.github.leonardoz.kanbapp.view.viewmodel.BoardsViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/boardsRecyclerView"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

        <TextView
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/no_data_available"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/createBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/ic_input_add"
                android:onClick="@{(view) -> boardsViewModel.onNewBoardClicked()}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>