<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_new_column"
          android:title="@string/new_column"
          android:orderInCategory="100"
          app:showAsAction="always"/>

    <item android:id="@+id/action_manage"
          android:title="@string/manage"
          app:showAsAction="ifRoom"/>

</menu>
