<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".view.fragment.BoardFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabMaxWidth="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</FrameLayout>